# vaani-speech-to-text

./: .gitignore  README.md  main.py  pyproject.toml
speech_to_text/: __init__.py  __main__.py
speech_to_text/core/: app.py  audio_processor.py  speech_detector.py  transcriber.py
speech_to_text/models/: __init__.py  settings.py  speech_segment.py
speech_to_text/ui/: __init__.py  settings_dialog.py  speech_indicator.py  system_tray.py  test_mic_dialog.py
speech_to_text/utils/: __init__.py  audio_utils.py  config_manager.py  error_handling.py  llm_text_processing.py  logging_setup.py  text_inserter.py  text_processing.py
